# moove

./: .emacs.desktop  .gitignore  CMakeLists.txt  Makefile  README.md  TAGS  conanfile.py  conanfile.txt
.snprj/: moove.by  moove.cl  moove.con  moove.e  moove.ec  moove.f  moove.fd  moove.fil  moove.fu  moove.gv  moove.icl  moove.in  moove.iu  moove.iv  moove.ma  moove.md  moove.mi  moove.t  moove.to  moove.un
doxygen/: Doxyfile  Makefile  class_type.dox  language.dox  moove.dox  namespace.dox  plugins.dox
examples/ast_viewer/: Makefile  graphviz_visitor.cpp  graphviz_visitor.hpp  main.cpp
examples/syntax_highlighter/: Makefile  main.cpp
include/: Makefile  ast_base.hpp  ast_visitor.hpp  basic_op_pkgs.hpp  bc_program.hpp  builtin_registry.hpp  ci_string.hpp  codevect.hpp  compare.hpp  compiler.hpp  default_ops.hpp  deref.hpp  disassembler.hpp  dynamic_array.hpp  errorvar.hpp  except.hpp  exec_state.hpp  expr_ast.hpp  flow_ctrl.hpp  gen-accepts.sh  highlight.hpp  ilexer_source.hpp  immediate.hpp  interpreter.hpp  intvar.hpp  iterator_lexer_source.hpp  label_linker.hpp  lexer.hpp  lexer_helpers.hpp  listvar.hpp  marray.hpp  mem_pool.hpp  memory.hpp  op_map.hpp  op_package.hpp  op_wrappers.hpp  opcodes.hpp  parser.hpp  parser_msgs.hpp  parser_state.hpp  (+18 more)
moosh/: arbitrary_factorial.moo  arbitrary_factorial_nolist.moo  args_test.moo  e-digits-float.moo  e-digits.moo  fibonacci.moo  fibonacci2.moo  fibonacci_recusive.moo  if-elseif-else.moo  if-test.moo  index_set.moo  primes.moo  string.moo  vars.moo  while.moo
moosh/include/: moosh_builtins.hpp  msg_handler.hpp
moosh/src/: CMakeLists.txt  Makefile  Makefile~  disasm  disasm.cpp  disasm.d  gmon.out  massif.15146.ps  massif.15146.txt  moosh  moosh.cpp  moosh.cpp~  moosh.d  moosh_builtins.cpp  moosh_builtins.d  moosh_builtins.hpp  msg_handler.cpp  msg_handler.d  msg_handler.ti  script_visitor.cpp  script_visitor.hpp
src/: CMakeLists.txt  Makefile  Makefile.depends  bc_program.cpp  builtin_registry.cpp  codevect.cpp  como.warnings  compiler.cpp  disassembler.cpp  exec_state.cpp  expr_ast.cpp  flow_ctrl.cpp  immediate.cpp  interpreter.cpp  interpreter.cpp-OLD  intvar.cpp  label_linker.cpp  lexer.cpp  lexer_helpers.cpp  lexer_symbols.hpp  lexer_symbols.hpp.gperf  listvar.cpp  moove.output  moove.tab.cpp  moove.vcg  moove.y  moove_lexer.l  old_moove.y.cpp  op_map.cpp  op_package.cpp  opcodes.cpp  operators.cpp  parser.cpp  parser_state.cpp  realvar.cpp  reply.cpp  scatter_assignment_converter.cpp  stmt_ast.cpp  string_utils.cpp  strvar.cpp  (+6 more)
test-scripts/: bad_switch.moo  comments.moo  file_ext.moo  fork.moo  frob.moo  if_else.moo  numbers.moo  objnums.moo  protectbf.moo  scatter.moo  strcmp.moo  strings.moo  switch.moo  try_except.moo  while.moo  who.moo
tests/: Makefile
tests/symbol_table_test/: test.cpp
tests/type_reg/: test_reply.cpp  type_reg_test.cpp
tests/variant_test/: test.cpp
